2002-02-02  Nick Drochak  <ndrochak@gol.com>

	* CodeGroup.cs: Not done, but checking in now just in case

2002-01-30  Nick Drochak  <ndrochak@gol.com>

	* CodeGroup.cs: New file.  Not nearly done with this, but saving it
	in cvs just in case.
	* PolicyLevel.cs: Sarted just a bit on this then relized i need CodeGroup
	first (among others).  Checking in for disaster recovery.

2002-01-29  Nick Drochak  <ndrochak@gol.com>

	* PolicyStatementAttribute.cs: New file.
	* PolicyException.cs: Use correct namespace
	* PolicyLevel.cs: Add [Serializable] to class

2002-01-19  Duncan Mak  <duncan@ximian.com>

	* PolicyException.cs: New File.

2002-01-03  Nick Drochak  <ndrochak@gol.com>

	* IIdentityPermissionFactory.cs: New File
	* IMembershipCondition: New File

2001-12-29  Nick Drochak  <ndrochak@gol.com>

	* PolicyLevel.cs: New file

2001-12-21  Miguel de Icaza  <miguel@ximian.com>

	* SecurityElement.cs, CodeAccessPermission.cs IPermission.cs
	IStackWalk.cs SecurityElement.cs ISecurityEncodable.cs: New files.
	